<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Temperature">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/temperature"
        android:id="@+id/title"
        android:textSize="50sp"

        />

    <EditText
        android:autofillHints="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:id="@+id/editText"
        android:layout_marginTop="120dp"
        android:hint="@string/enter_a_value"
        android:textSize="20sp"
        android:inputType="numberDecimal|numberSigned"
        />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/f"
        android:textSize="20sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginTop="40dp">


        <RadioButton
            android:id="@+id/fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            android:checked="true"
            android:onClick="radioButtonClick"
            />


        <RadioButton
            android:id="@+id/celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            android:onClick="radioButtonClick"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textSize="20sp" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        />




    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/BottomNavViewBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/navigation">

    </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>

</RelativeLayout>