<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/animation_list"
    android:id="@+id/container">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        app:srcCompat="@drawable/logo_converter_bold"
        android:padding="3dp"/>

    <Button
        android:id="@+id/temperature_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="openTemperature"
        android:padding="10dp"
        android:text="@string/temperature"
        android:layout_gravity="center"
        android:fontFamily="@font/lemonmilk"
        android:backgroundTint="@color/lightwhite"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/weight_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="openWeight"
        android:padding="10dp"
        android:text="@string/weight"
        android:layout_gravity="center"
        android:fontFamily="@font/lemonmilk"
        android:backgroundTint="@color/lightwhite"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/volume_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="openVolume"
        android:padding="10dp"
        android:text="@string/volume"
        android:layout_gravity="center"
        android:fontFamily="@font/lemonmilk"
        android:backgroundTint="@color/lightwhite"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/distance_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="openDistance"
        android:padding="10dp"
        android:text="@string/distance"
        android:layout_gravity="center"
        android:fontFamily="@font/lemonmilk"
        android:backgroundTint="@color/lightwhite"
        android:textColor="@color/white"/>



</LinearLayout>