<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weight"
    android:background="@drawable/animation_list"
    android:id="@+id/containerW">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:src="@drawable/title_weight_bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:layout_centerVertical="true"
        />


    <EditText
        android:autofillHints="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:id="@+id/editText"
        android:layout_marginTop="120dp"
        android:hint="@string/enter_a_value"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:fontFamily="@font/lemonmilklight"
        android:textColor="@color/white"
        android:textColorHint="@color/lightwhite"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:text="@string/lbs"
        android:textSize="20sp"
        android:fontFamily="@font/lemonmilklight"
        android:textColor="@color/white"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginTop="40dp">


        <RadioButton
            android:id="@+id/pounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pounds"
            android:onClick="radioButtonClick"
            android:checked="true"
            android:fontFamily="@font/lemonmilklight"
            android:textColor="@color/white"/>


        <RadioButton
            android:id="@+id/kilograms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilograms"
            android:onClick="radioButtonClick"
            android:fontFamily="@font/lemonmilklight"
            android:textColor="@color/white"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textSize="40dp"
        android:fontFamily="@font/lemonmilk"
        android:shadowColor="@color/black"
        android:shadowDx="9"
        android:shadowDy="9"
        android:shadowRadius="15"
        android:textColor="@color/white" />

    <!--
    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@id/radioGroup"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        />
-->



    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/BottomNavViewBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/navigation">

    </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>

</RelativeLayout>